# uv-guard

./: LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
tests/: test_cli.py  test_guardrails.py  test_package.py  test_project.py  test_token.py  test_uv.py
uv_guard/: cli.py  exceptions.py  guardrails.py  logs.py  package.py  project.py  token.py  uv.py
